# bruss_api

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  openapi.yml
src/: configs.rs  cors.rs  db.rs  main.rs  response.rs  tests.rs
src/data/: area.rs  area_type.rs  mod.rs  position.rs  route.rs  stop.rs
src/routes/: map.rs  mod.rs
src/routes/map/: area.rs  db.rs  getter.rs  mod.rs  params.rs  path.rs  pipeline.rs  query.rs  route.rs  segment.rs  stop.rs  trip.rs
src/routes/tracking/: mod.rs  trip.rs
src/tt/: area.rs  client.rs  error.rs  mod.rs  route.rs  stop.rs
src/utils/: build_db.rs  db.rs  mod.rs
