[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
# serde_postgres = "0.2.0"
mongodb = "2.8.1"
serde = "1.0"
postgres = "0.19.7"
# tokio-postgres = "0.7.10"
tokio = "1.36"
toml = "0.8.10"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = "0.11.24"
