[package]
name = "bruss_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["mongodb"]}
reqwest = { version = "0.11.24", features = ["json"] }
mongodb = "2.8.1"
serde = "1.0"
postgres = "0.19.7"
tokio = "1.36"
toml = "0.8.10"
futures = "0.3.30"
lazy_static = "1.4.0"
tt = { path = "../tt" }
