[package]
name = "bruss_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["mongodb"]}
reqwest = { workspace = true }
# keep this to 2.8.2 for now: using a newer version breaks rocket_db_pools
mongodb = { workspace = true }
bson = { workspace = true }
serde = "1.0"
postgres = "0.19.7"
tokio = "1.36"
toml = "0.8.10"
futures = "0.3.30"
lazy_static = "1.4.0"
chrono = { version = "^0.4", features = ["serde"] }
bruss_config = { path = "../../config" }
bruss_data = { path = "../../data", features = ["db"] }
tt = { path = "../../tt" }
log = "0.4.27"
